--- a/package.json
+++ b/package.json
@@ -8,17 +8,22 @@
     "@types/node": "11.11.3",
     "@types/react": "16.8.8",
     "@types/react-dom": "16.8.2",
+    "@types/styled-components": "^4.1.12",
+    "bootstrap": "^4.3.1",
     "d3": "^5.9.2",
     "react": "^16.8.4",
+    "react-bootstrap": "^1.0.0-beta.6",
     "react-dom": "^16.8.4",
     "react-scripts": "2.1.8",
+    "styled-components": "^4.2.0",
     "typescript": "3.3.3333"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prod": "react-scripts build && serve -s build"
   },
   "eslintConfig": {
     "extends": "react-app"
