--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,17 +6,22 @@
     "@types/d3": "^5.7.1",
     "@types/jest": "24.0.11",
     "@types/node": "11.11.3",
-    "@types/react": "16.8.8",
+    "@types/react": "^16.8.13",
     "@types/react-dom": "16.8.2",
+    "@types/react-router-dom": "^4.3.1",
     "@types/styled-components": "^4.1.12",
+    "@types/uuid": "^3.4.4",
+    "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "d3": "^5.9.2",
-    "react": "^16.8.4",
+    "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.6",
     "react-dom": "^16.8.4",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
     "styled-components": "^4.2.0",
-    "typescript": "3.3.3333"
+    "typescript": "^3.4.2",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
