--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,8 @@
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# misc
+.DS_Store
+/.vscode
+/tools
 /api/secret.ts
+/api/logs/access.log*
