apply redux and saga

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,23 +4,32 @@
   "private": true,
   "dependencies": {
     "@types/d3": "^5.7.1",
+    "@types/detect-browser": "^4.0.0",
     "@types/jest": "24.0.11",
     "@types/node": "11.11.3",
     "@types/react": "^16.8.13",
     "@types/react-dom": "16.8.2",
+    "@types/react-redux": "^7.0.6",
     "@types/react-router-dom": "^4.3.1",
+    "@types/redux-saga": "^0.10.5",
     "@types/styled-components": "^4.1.12",
+    "@types/useragent": "^2.1.1",
     "@types/uuid": "^3.4.4",
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "d3": "^5.9.2",
+    "detect-browser": "^4.3.0",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.6",
     "react-dom": "^16.8.4",
+    "react-redux": "^7.0.1",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
+    "redux-saga": "^1.0.2",
     "styled-components": "^4.2.0",
     "typescript": "^3.4.2",
+    "user-agents": "^1.0.223",
+    "useragent": "^2.3.0",
     "uuid": "^3.3.2"
   },
   "scripts": {
