--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@types/detect-browser": "^4.0.0",
     "@types/jest": "24.0.11",
     "@types/node": "11.11.3",
+    "@types/papaparse": "^5.0.0",
     "@types/query-string": "^6.3.0",
     "@types/react": "^16.8.13",
     "@types/react-dom": "16.8.2",
@@ -21,10 +22,12 @@
     "cross-env": "^5.2.0",
     "d3": "^5.9.2",
     "detect-browser": "^4.3.0",
+    "papaparse": "^5.0.0",
     "query-string": "^6.5.0",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.6",
     "react-dom": "^16.8.4",
+    "react-dropzone": "^10.1.5",
     "react-notifications": "^1.4.3",
     "react-redux": "^7.0.1",
     "react-router-dom": "^5.0.0",
