--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@types/jest": "24.0.11",
     "@types/node": "11.11.3",
     "@types/papaparse": "^5.0.0",
+    "@types/qs": "^6.5.3",
     "@types/query-string": "^6.3.0",
     "@types/react": "^16.8.13",
     "@types/react-dom": "16.8.2",
@@ -23,6 +24,7 @@
     "d3": "^5.9.2",
     "detect-browser": "^4.3.0",
     "papaparse": "^5.0.0",
+    "qs": "^6.7.0",
     "query-string": "^6.5.0",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.6",
