--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@types/query-string": "^6.3.0",
     "@types/react": "^16.8.13",
     "@types/react-dom": "16.8.2",
+    "@types/react-numeric-input": "^2.2.3",
     "@types/react-redux": "^7.0.6",
     "@types/react-router-dom": "^4.3.1",
     "@types/redux-saga": "^0.10.5",
@@ -31,6 +32,7 @@
     "react-dom": "^16.8.4",
     "react-dropzone": "^10.1.5",
     "react-notifications": "^1.4.3",
+    "react-numeric-input": "^2.2.3",
     "react-redux": "^7.0.1",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
