--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.2.1",
+    "@material-ui/icons": "^4.2.1",
     "@types/d3": "^5.7.1",
     "@types/detect-browser": "^4.0.0",
     "@types/jest": "24.0.11",
