--- a/api/package.json
+++ b/api/package.json
@@ -22,7 +22,7 @@
     "production": "cross-env NODE_ENV=production node build/src/index.js",
     "dev": "node ./node_modules/nodemon/bin/nodemon.js",
     "debug": "node ./node_modules/nodemon/bin/nodemon.js --inspect",
-    "importDB": "ts-node src/script/importDB.ts",
+    "importDB": "ts-node src/script/importData.ts",
     "testScript": "ts-node src/script/test.ts",
     "shell": "ts-node"
   },
