--- a/api/package.json
+++ b/api/package.json
@@ -7,6 +7,8 @@
     "@types/koa-router": "^7.0.42",
     "@types/mongoose": "^5.5.13",
     "cross-env": "^5.2.0",
+    "graphql": "^14.5.6",
+    "graphql-server-koa": "^1.4.1",
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.8.1",
     "koa-body": "^4.1.1",
