--- a/api/package.json
+++ b/api/package.json
@@ -6,6 +6,7 @@
     "@types/koa": "^2.0.49",
     "@types/koa-router": "^7.0.42",
     "@types/mongoose": "^5.5.13",
+    "apollo-server-koa": "^2.9.4",
     "cross-env": "^5.2.0",
     "graphql": "^14.5.6",
     "graphql-server-koa": "^1.4.1",
