--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,45 +3,45 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.4.3",
-    "@material-ui/icons": "^4.4.3",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "@types/d3": "^5.7.2",
-    "@types/jest": "24.0.18",
-    "@types/node": "12.7.8",
-    "@types/papaparse": "^5.0.1",
-    "@types/qs": "^6.5.3",
-    "@types/react": "^16.9.3",
-    "@types/react-dom": "16.9.1",
+    "@types/jest": "26.0.8",
+    "@types/node": "14.0.27",
+    "@types/papaparse": "^5.0.6",
+    "@types/qs": "^6.9.4",
+    "@types/react": "^16.9.43",
+    "@types/react-dom": "16.9.8",
     "@types/react-numeric-input": "^2.2.3",
-    "@types/react-redux": "^7.1.4",
-    "@types/react-router-dom": "^5.1.0",
-    "@types/styled-components": "^4.1.19",
+    "@types/react-redux": "^7.1.9",
+    "@types/react-router-dom": "^5.1.5",
+    "@types/styled-components": "^5.1.1",
     "@types/useragent": "^2.1.1",
-    "@types/uuid": "^3.4.5",
-    "antd": "^3.23.5",
-    "axios": "^0.19.0",
-    "bootstrap": "^4.3.1",
-    "cross-env": "^6.0.0",
-    "d3": "^5.12.0",
-    "detect-browser": "^4.7.0",
-    "papaparse": "^5.1.0",
-    "qs": "^6.9.0",
-    "query-string": "^6.8.3",
-    "react": "^16.10.1",
-    "react-bootstrap": "^1.0.0-beta.11",
-    "react-dom": "^16.10.1",
-    "react-dropzone": "^10.1.9",
-    "react-notifications": "^1.4.3",
+    "@types/uuid": "^8.0.0",
+    "antd": "^4.5.1",
+    "axios": "^0.19.2",
+    "bootstrap": "^4.5.0",
+    "cross-env": "^7.0.2",
+    "d3": "^5.16.0",
+    "detect-browser": "^5.1.1",
+    "papaparse": "^5.2.0",
+    "qs": "^6.9.4",
+    "query-string": "^6.13.1",
+    "react": "^16.13.1",
+    "react-bootstrap": "^1.3.0",
+    "react-dom": "^16.13.1",
+    "react-dropzone": "^11.0.2",
+    "react-notifications": "^1.6.0",
     "react-numeric-input": "^2.2.3",
-    "react-redux": "^7.1.1",
-    "react-router-dom": "^5.1.1",
-    "react-scripts": "3.1.2",
-    "redux-saga": "^1.1.1",
-    "styled-components": "^4.4.0",
-    "typescript": "^3.6.3",
-    "user-agents": "^1.0.395",
+    "react-redux": "^7.2.1",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.1",
+    "redux-saga": "^1.1.3",
+    "styled-components": "^5.1.1",
+    "typescript": "^3.9.7",
+    "user-agents": "^1.0.559",
     "useragent": "^2.3.0",
-    "uuid": "^3.3.3"
+    "uuid": "^8.3.0"
   },
   "scripts": {
     "start": "cross-env NODE_ENV=development react-scripts start",
