--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.2.1",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@types/d3": "^5.7.2",
@@ -36,6 +37,7 @@
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "redux-react-hook": "^4.0.1",
     "redux-saga": "^1.1.3",
     "styled-components": "^5.1.1",
     "typescript": "^3.9.7",
