--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -2,7 +2,7 @@ FROM node:14
 WORKDIR /app
 EXPOSE 8000
 ADD ./package.json .
-ADD ./yarn.lock .
+ADD ./yarn.lock* .
 RUN yarn install
 ADD . .
 RUN yarn build
