--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:14 as builder
 WORKDIR /app
 ADD ./package.json ./
-ADD ./yarn.lock .
+ADD ./yarn.lock* .
 RUN yarn install
 ADD . .
 RUN yarn build
