--- a/api/package.json
+++ b/api/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/archiver": "^5.1.1",
     "@types/koa": "^2.11.3",
     "@types/koa-router": "^7.4.1",
     "@types/mongoose": "^5.7.34",
     "apollo-server-koa": "^2.16.1",
+    "archiver": "^5.3.0",
     "cross-env": "^7.0.2",
     "graphql": "^15.3.0",
     "jsonwebtoken": "^8.5.1",
@@ -17,7 +19,8 @@
     "koa-router": "^9.1.0",
     "log4js": "^6.3.0",
     "mongoose": "^5.9.26",
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.12",
+    "zip-a-folder": "^1.1.0"
   },
   "scripts": {
     "start": "ts-node src/index.ts",
