--- a/api/package.json
+++ b/api/package.json
@@ -4,22 +4,29 @@
   "private": true,
   "dependencies": {
     "@types/archiver": "^5.1.1",
+    "@types/ejs": "^3.1.0",
+    "@types/html-pdf": "^2.2.1",
     "@types/koa": "^2.11.3",
     "@types/koa-router": "^7.4.1",
     "@types/mongoose": "^5.7.34",
+    "@types/react-dom": "^17.0.11",
     "apollo-server-koa": "^2.16.1",
     "archiver": "^5.3.0",
     "cross-env": "^7.0.2",
+    "ejs": "^3.1.6",
     "graphql": "^15.3.0",
+    "html-pdf": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.0",
     "koa-body": "^4.2.0",
     "koa-cors": "^0.0.16",
     "koa-jwt": "^4.0.0",
     "koa-router": "^9.1.0",
+    "koa-views": "^8.0.0",
     "log4js": "^6.3.0",
     "mongoose": "^5.9.26",
     "nodemon": "^2.0.12",
+    "react-dom": "^17.0.2",
     "zip-a-folder": "^1.1.0"
   },
   "scripts": {
